TKSS-745: SharedSecretsUtil is not flexible